# twitter_client

./: .env.example  .gitignore  Cargo.toml  build.rs
.github/workflows/: release.yml  rust.yml
src/: image.rs  main.rs
src/background/: config.rs  mod.rs
src/background/twitter/: mod.rs
src/ui/: image.rs  logged_in.rs  logged_out.rs  mod.rs
src/ui/logged_in/: detail.rs  list.rs  mod.rs  render_tweet_debug.rs  tweet.rs  tweet_list.rs
src/ui/utils/: clickable_link.rs  image.rs  mod.rs
ui/: main.60  style.60  utils.60
ui/tweet/: detail.60  list.60
