[package]
name = "twitter_client"
version = "0.4.0"
edition = "2021"
license = "EUPL"

[dependencies]
bytes = "1.1"
dotenv = "0.15"
egg-mode = "0.16"
futures = "0.3"
log = "0.4"
open = "2.0"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.15", features = ["time", "macros"] }
toml = "0.5"

[dependencies.sixtyfps]
version = "0.1"
default-features = false
features = ["std", "backend-gl"]

[build-dependencies]
dotenv = "0.15"
sixtyfps-build = "0.1"
