[package]
name = "twitter_client"
version = "0.5.0"
edition = "2021"
license = "EUPL"

[dependencies]
dotenv = "0.15"
egg-mode = "0.16"
log = "0.4"
open = "3.0"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.18", features = ["time", "macros"] }
toml = "0.5"
egui = "0.16"

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.egui_with_background]
git = "https://github.com/victorkoenders/egui_with_background/"
features = ["reqwest"]

[build-dependencies]
dotenv = "0.15"
